support 4 channels
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>